[package]
name = "asa-graphs"
version = "0.1.0"
edition = "2021"
authors = ["danbulnet <daniel@bulanda.net>"]
default-run = "asa_graphs"

[lib]
name = "asa_graphs"
path = "src/lib.rs"

[[bin]]
name = "asa_graphs"
path = "src/bin/main.rs"

[dependencies]
bionet-common = { git = "https://github.com/danbulnet/bionet-common.git", version = "0.1.0" }
dyn-clone = "1.0.9"
env_logger = "0.9.0"
log = "0.4.17"
polars-core = { version = "0.23.2", features = ["temporal"] }
rand = "0.8.5"

[dev-dependencies]
pretty_assertions = "1.2.1"
env_logger = "0.9.0"
